@@ -66,7 +66,7 @@
 <hr width="100%">
 <h1><a name="1"></a>1. General</h1>
 <h2><a name="1.1"></a>1.1 About this FAQ</h2>
-<blockquote><p>This FAQ was originally written and maintained by Chris Allegretta &lt;<a href="mailto:chrisa@asty.org">chrisa@asty.org</a>&gt;, who also happens to be the creator of nano. It is currently maintained by David Lawrence Ramsey &lt;<a href="mailto:pooka109@cox.net">pooka109@cox.net</a>&gt;. Maybe someone else will volunteer to maintain this FAQ someday, who knows...</p></blockquote>
+<blockquote><p>This FAQ was originally written and maintained by Chris Allegretta &lt;<a href="mailto:chrisa@asty.org">chrisa@asty.org</a>&gt;, who also happens to be the creator of nano. It is currently maintained by David Lawrence Ramsey &lt;<a href="mailto:pooka109@gmail.com">pooka109@gmail.com</a>&gt;. Maybe someone else will volunteer to maintain this FAQ someday, who knows...</p></blockquote>
 <h2><a name="1.2"></a>1.2. How do I contribute to it?</h2>
 <blockquote><p>Your best bet is to send it to the nano email address, <a href="mailto:nano@nano-editor.org">nano@nano-editor.org</a> and if it is useful enough it will be included in future versions.</p></blockquote>
 <h2><a name="1.3"></a>1.3. What is GNU nano?</h2>
@@ -256,7 +256,8 @@
 <h2><a name="7.5"></a>7.5. Can I have CVS write access?</h2>
 <blockquote><p>Re-read Section <a href="#7.4">7.4</a> and you should know the answer.</p></blockquote>
 <h2><a name="8"></a>8. ChangeLog</h2>
-<blockquote><p>2007/01/01 - Update section 4.1 to describe how to open files with names beginning with '+' at specified columns as well as lines. (DLR)<br>
+<blockquote><p>2007/04/04 - Update email address. (DLR)<br>
+2007/01/01 - Update section 4.1 to describe how to open files with names beginning with '+' at specified columns as well as lines. (DLR)<br>
 2006/11/25 - Add miscellaneous wording and capitalization fixes. (DLR)<br>
 2006/10/28 - Update various links for the 2.0 branch of nano. (DLR)<br>
 2006/10/06 - Update the question in section 4.13 to match the version of it in the answer section. (DLR)<br>
